- changed Tag class to record